2006-08-03  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (debug): New function.
	(option_spec): Parse debug log names.
	(set_defaults): Open debug log files.
	(*): Update to compensate.

	* log_accum.pl (get_topdir): Quote file name in debug output.

2006-07-24  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Actually remove temporary files.  Sanity check that
	commit_prep ran first, exiting if not, as documented.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)

2006-06-26  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (compile_subject): Keep slashes in paths.

	* log_accum.pl: Shrink attributions, referring reader to ChangeLog.
	(write_file): Create empty files.
	(cleanup_tmpfiles): Fix regexp & untaint result before deleting.
	(main): Don't worry about empty log files.
	(Original patch from Sylvain Beucler <beuc@beuc.net>.)

2006-06-07  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (set_defaults): Don't dereference undefined value.
	(process_stdin): Handle dashes in tag names.

	* log_accum.pl (main): Fix branch filter.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)

2006-06-05  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Restore #! @PERL@ -T line.  Print warm fuzzies.

2006-05-23  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Remove old FIXME.  Improve commenting.
	(append_to_file): Rename to...
	(append_files_to_file): ...this.

2006-05-22  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (mail_separate_diffs): Don't use RCS Id key in example.

	* log_accum.pl (main): Drop unnecessary parentheses.

	* log_accum.pl (set_defaults): Clone --mail-to for empty
	--separate-diffs.
	(%option_spec): Make --separate-diffs accept an optional list of
	strings.
	(main): Pass separate-diffs emails to mail_separate_diffs.

	* log_accum.pl (mail_separate_diffs): Include the last diff.
	(Original patch from Sylvain Beucler <beuc@beuc.net>.)

2006-05-17  Derek Price  <derek@ximbiot.com>
